[gd_scene load_steps=10 format=3 uid="uid://de8cye1e0yply"]

[ext_resource type="Script" path="res://addons/lan_multiplayer/scripts/lobby_controller.gd" id="1_7uolb"]
[ext_resource type="Theme" uid="uid://dn2vmjrbb4dc6" path="res://addons/lan_multiplayer/assets/scheme/Default.tres" id="2_8evn8"]
[ext_resource type="Script" path="res://addons/lan_multiplayer/scripts/scheme_controller.gd" id="3_j0n0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j87d1"]

[sub_resource type="Animation" id="Animation_80ao1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gmsa6"]
resource_name = "full"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6kecv"]
resource_name = "invalid"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gw1d3"]
_data = {
"RESET": SubResource("Animation_80ao1"),
"full": SubResource("Animation_gmsa6"),
"invalid": SubResource("Animation_6kecv")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ediwl"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)

[node name="lobby_controller" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uolb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")

[node name="host" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="host_button" type="Button" parent="host"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
text = "HOST"

[node name="settings" type="Button" parent="host"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
text = "SETTINGS"

[node name="start_button" type="Button" parent="host"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
text = "START"

[node name="ip_address" type="LineEdit" parent="host"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 80.0
offset_right = -100.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
placeholder_text = "Ip Address"
alignment = 1
editable = false

[node name="port" type="LineEdit" parent="host"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
placeholder_text = "Port"
alignment = 1
editable = false

[node name="join" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="join_button" type="Button" parent="join"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
text = "JOIN"

[node name="ip_address" type="LineEdit" parent="join"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 80.0
offset_right = 140.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
placeholder_text = "Ip Address"
alignment = 1

[node name="port" type="LineEdit" parent="join"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = 80.0
offset_right = 220.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
placeholder_text = "Port"
alignment = 1

[node name="error_text" type="Label" parent="join"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = 122.0
offset_right = 220.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
theme = ExtResource("2_8evn8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_j87d1")
text = "*Error: ..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="join/error_text"]
libraries = {
"": SubResource("AnimationLibrary_gw1d3")
}

[node name="waiting_text" type="Label" parent="join"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_filter = 0
theme = ExtResource("2_8evn8")
text = "WAITING
FOR HOST
TO START..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="room" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 19.0
offset_top = -119.0
offset_right = 219.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Panel" type="Panel" parent="room"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -92.5
offset_right = 100.0
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_8evn8")
theme_override_styles/panel = SubResource("StyleBoxFlat_ediwl")

[node name="room" type="VBoxContainer" parent="room"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -92.5
offset_right = 100.0
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
theme_override_constants/separation = -1

[node name="back_button" type="Button" parent="room"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 107.5
offset_right = 100.0
offset_bottom = 147.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
text = "BACK"

[node name="settings" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="max_players" type="SpinBox" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
min_value = 2.0
max_value = 8.0
value = 4.0
alignment = 1
prefix = "Max Players:"

[node name="time" type="SpinBox" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -65.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
max_value = 600.0
step = 60.0
alignment = 1
prefix = "Time:"
suffix = "s"

[node name="back_button" type="Button" parent="settings"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_8evn8")
text = "BACK"

[node name="scheme_controller" type="Node" parent="."]
script = ExtResource("3_j0n0q")

[connection signal="pressed" from="host/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="host/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="host/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="join/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="room/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="settings/back_button" to="." method="_on_safe_back_button_pressed"]
